--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css">
     <title>Rock Paper Scissors</title>
   </head>
 
   <body>
+    <div class="buttons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+    
+    <div class="scoreAndResult">
+        <h1 id="results"></h1>
+        <h3 id="score"></h1>
+    </div>
+    
     <script src="js/main.js"></script>
   </body>
 </html>
